# bq-entreprise-blueprint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ingestion.yml
infra/: bigquery.tf  gcs.tf  iam.tf  main.tf  output.tf  variables.tf
ingestion/: pyproject.toml
ingestion/src/ingestion/cegid/: extract.py
ingestion/src/ingestion/salesforce/: extract.py
ingestion/src/ingestion/sap/: extract.py
ingestion/src/ingestion/shared/: gcs_client.py  schema_registry.py
