[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.18",
    "google-cloud-bigquery>=3.25",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "faker>=30.0",
    "pydantic>=2.9",
    "structlog>=24.4",
]

[project.scripts]
ingest-cegid      = "ingestion.cegid.extract:main"
ingest-sap        = "ingestion.sap.extract:main"
ingest-salesforce = "ingestion.salesforce.extract:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
